// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

option go_package = "tammy/ent/proto/entpb";

message Account {
  int64 id = 1;

  bool isActive = 3;

  bool isBlocked = 4;

  User user = 400;

  repeated Portal portal = 401;

  repeated AccountField fields = 402;
}

message CreateAccountRequest {
  Account account = 1;
}

message GetAccountRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateAccountRequest {
  Account account = 1;
}

message DeleteAccountRequest {
  int64 id = 1;
}

message ListAccountRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListAccountResponse {
  repeated Account account_list = 1;

  string next_page_token = 2;
}

message BatchCreateAccountsRequest {
  repeated CreateAccountRequest requests = 1;
}

message BatchCreateAccountsResponse {
  repeated Account accounts = 1;
}

message AccountField {
  int64 id = 1;

  int64 fid = 2;

  string key = 3;

  string value = 4;

  Account account = 400;
}

message CreateAccountFieldRequest {
  AccountField account_field = 1;
}

message GetAccountFieldRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateAccountFieldRequest {
  AccountField account_field = 1;
}

message DeleteAccountFieldRequest {
  int64 id = 1;
}

message ListAccountFieldRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListAccountFieldResponse {
  repeated AccountField account_field_list = 1;

  string next_page_token = 2;
}

message BatchCreateAccountFieldsRequest {
  repeated CreateAccountFieldRequest requests = 1;
}

message BatchCreateAccountFieldsResponse {
  repeated AccountField account_fields = 1;
}

message Portal {
  int64 id = 1;

  google.protobuf.Timestamp createdAt = 2;

  google.protobuf.Timestamp updatedAt = 3;

  bool isActive = 4;

  string slug = 5;

  repeated Account members = 400;

  repeated PortalMetadata metadata = 401;

  repeated PortalLegal legal = 402;
}

message CreatePortalRequest {
  Portal portal = 1;
}

message GetPortalRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdatePortalRequest {
  Portal portal = 1;
}

message DeletePortalRequest {
  int64 id = 1;
}

message ListPortalRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListPortalResponse {
  repeated Portal portal_list = 1;

  string next_page_token = 2;
}

message BatchCreatePortalsRequest {
  repeated CreatePortalRequest requests = 1;
}

message BatchCreatePortalsResponse {
  repeated Portal portals = 1;
}

message PortalLegal {
  int64 id = 1;

  google.protobuf.Timestamp createdAt = 2;

  google.protobuf.Timestamp updatedAt = 3;

  string privacyPolicy = 4;

  string termOfService = 5;

  string copyright = 6;

  string onlineTrainingAgreement = 7;

  Portal portal = 400;
}

message CreatePortalLegalRequest {
  PortalLegal portal_legal = 1;
}

message GetPortalLegalRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdatePortalLegalRequest {
  PortalLegal portal_legal = 1;
}

message DeletePortalLegalRequest {
  int64 id = 1;
}

message ListPortalLegalRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListPortalLegalResponse {
  repeated PortalLegal portal_legal_list = 1;

  string next_page_token = 2;
}

message BatchCreatePortalLegalsRequest {
  repeated CreatePortalLegalRequest requests = 1;
}

message BatchCreatePortalLegalsResponse {
  repeated PortalLegal portal_legals = 1;
}

message PortalMetadata {
  int64 id = 1;

  google.protobuf.Timestamp createdAt = 2;

  google.protobuf.Timestamp updatedAt = 3;

  Kind kind = 4;

  Lifecycle lifecycle = 5;

  Portal portal = 400;

  enum Kind {
    KIND_DEVELOPMENT = 0;

    KIND_INTERNAL = 1;

    KIND_CONTENT_PARTNER = 2;

    KIND_DISTRIBUTION_PARTNER = 3;

    KIND_CUSTOMER = 4;

    KIND_TEAM = 5;

    KIND_BIG_PARTNER = 6;
  }

  enum Lifecycle {
    LIFECYCLE_TRIAL = 0;

    LIFECYCLE_ONBOARD = 1;

    LIFECYCLE_LIVE = 2;

    LIFECYCLE_EXPIRED_TRIAL = 3;

    LIFECYCLE_SUSPENDED = 4;

    LIFECYCLE_CANCELLED = 5;

    LIFECYCLE_TEST = 6;

    LIFECYCLE_SAMPLE = 7;

    LIFECYCLE_TEMPLATE = 8;
  }
}

message CreatePortalMetadataRequest {
  PortalMetadata portal_metadata = 1;
}

message GetPortalMetadataRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdatePortalMetadataRequest {
  PortalMetadata portal_metadata = 1;
}

message DeletePortalMetadataRequest {
  int64 id = 1;
}

message ListPortalMetadataRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListPortalMetadataResponse {
  repeated PortalMetadata portal_metadata_list = 1;

  string next_page_token = 2;
}

message BatchCreatePortalMetadataSliceRequest {
  repeated CreatePortalMetadataRequest requests = 1;
}

message BatchCreatePortalMetadataSliceResponse {
  repeated PortalMetadata portal_metadata_slice = 1;
}

message User {
  int64 id = 1;

  bool isActive = 2;

  google.protobuf.Timestamp createdAt = 3;

  google.protobuf.Timestamp updatedAt = 4;

  UserPassword password = 400;

  repeated Account accounts = 401;

  repeated UserEmail emails = 402;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message ListUserRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

message UserEmail {
  int64 id = 1;

  string value = 2;

  google.protobuf.Timestamp createdAt = 3;

  bool isVerified = 4;

  User user = 400;
}

message CreateUserEmailRequest {
  UserEmail user_email = 1;
}

message GetUserEmailRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserEmailRequest {
  UserEmail user_email = 1;
}

message DeleteUserEmailRequest {
  int64 id = 1;
}

message ListUserEmailRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserEmailResponse {
  repeated UserEmail user_email_list = 1;

  string next_page_token = 2;
}

message BatchCreateUserEmailsRequest {
  repeated CreateUserEmailRequest requests = 1;
}

message BatchCreateUserEmailsResponse {
  repeated UserEmail user_emails = 1;
}

message UserPassword {
  int64 id = 1;

  string hashedValue = 3;

  bool isActive = 4;

  uint32 createdAt = 5;

  User user = 400;
}

message CreateUserPasswordRequest {
  UserPassword user_password = 1;
}

message GetUserPasswordRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserPasswordRequest {
  UserPassword user_password = 1;
}

message DeleteUserPasswordRequest {
  int64 id = 1;
}

message ListUserPasswordRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserPasswordResponse {
  repeated UserPassword user_password_list = 1;

  string next_page_token = 2;
}

message BatchCreateUserPasswordsRequest {
  repeated CreateUserPasswordRequest requests = 1;
}

message BatchCreateUserPasswordsResponse {
  repeated UserPassword user_passwords = 1;
}

service AccountService {
  rpc Create ( CreateAccountRequest ) returns ( Account );

  rpc Get ( GetAccountRequest ) returns ( Account );

  rpc Update ( UpdateAccountRequest ) returns ( Account );

  rpc Delete ( DeleteAccountRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListAccountRequest ) returns ( ListAccountResponse );

  rpc BatchCreate ( BatchCreateAccountsRequest ) returns ( BatchCreateAccountsResponse );
}

service AccountFieldService {
  rpc Create ( CreateAccountFieldRequest ) returns ( AccountField );

  rpc Get ( GetAccountFieldRequest ) returns ( AccountField );

  rpc Update ( UpdateAccountFieldRequest ) returns ( AccountField );

  rpc Delete ( DeleteAccountFieldRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListAccountFieldRequest ) returns ( ListAccountFieldResponse );

  rpc BatchCreate ( BatchCreateAccountFieldsRequest ) returns ( BatchCreateAccountFieldsResponse );
}

service PortalService {
  rpc Create ( CreatePortalRequest ) returns ( Portal );

  rpc Get ( GetPortalRequest ) returns ( Portal );

  rpc Update ( UpdatePortalRequest ) returns ( Portal );

  rpc Delete ( DeletePortalRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListPortalRequest ) returns ( ListPortalResponse );

  rpc BatchCreate ( BatchCreatePortalsRequest ) returns ( BatchCreatePortalsResponse );
}

service PortalLegalService {
  rpc Create ( CreatePortalLegalRequest ) returns ( PortalLegal );

  rpc Get ( GetPortalLegalRequest ) returns ( PortalLegal );

  rpc Update ( UpdatePortalLegalRequest ) returns ( PortalLegal );

  rpc Delete ( DeletePortalLegalRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListPortalLegalRequest ) returns ( ListPortalLegalResponse );

  rpc BatchCreate ( BatchCreatePortalLegalsRequest ) returns ( BatchCreatePortalLegalsResponse );
}

service PortalMetadataService {
  rpc Create ( CreatePortalMetadataRequest ) returns ( PortalMetadata );

  rpc Get ( GetPortalMetadataRequest ) returns ( PortalMetadata );

  rpc Update ( UpdatePortalMetadataRequest ) returns ( PortalMetadata );

  rpc Delete ( DeletePortalMetadataRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListPortalMetadataRequest ) returns ( ListPortalMetadataResponse );

  rpc BatchCreate ( BatchCreatePortalMetadataSliceRequest ) returns ( BatchCreatePortalMetadataSliceResponse );
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserRequest ) returns ( ListUserResponse );

  rpc BatchCreate ( BatchCreateUsersRequest ) returns ( BatchCreateUsersResponse );
}

service UserEmailService {
  rpc Create ( CreateUserEmailRequest ) returns ( UserEmail );

  rpc Get ( GetUserEmailRequest ) returns ( UserEmail );

  rpc Update ( UpdateUserEmailRequest ) returns ( UserEmail );

  rpc Delete ( DeleteUserEmailRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserEmailRequest ) returns ( ListUserEmailResponse );

  rpc BatchCreate ( BatchCreateUserEmailsRequest ) returns ( BatchCreateUserEmailsResponse );
}

service UserPasswordService {
  rpc Create ( CreateUserPasswordRequest ) returns ( UserPassword );

  rpc Get ( GetUserPasswordRequest ) returns ( UserPassword );

  rpc Update ( UpdateUserPasswordRequest ) returns ( UserPassword );

  rpc Delete ( DeleteUserPasswordRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserPasswordRequest ) returns ( ListUserPasswordResponse );

  rpc BatchCreate ( BatchCreateUserPasswordsRequest ) returns ( BatchCreateUserPasswordsResponse );
}
